--- a/src/main.css
+++ b/src/main.css
@@ -27,13 +27,12 @@
     line-height: 1.1;
   }
 
-  #footer {
-    size: 300%;
+.container {
+    position: relative;
     text-align: center;
-    bottom: 0;
-
-    text-decoration: wavy;
-  }
+    color: white;
+  
+}
 
   .image {
     height: 300px;
@@ -43,6 +42,14 @@
   .image:hover {
     box-shadow: 30px;
     box-shadow: #747bff;
+  }
+
+  #footer {
+    size: 300%;
+    text-align: center;
+    bottom: 0;
+
+    text-decoration: wavy;
   }
   
   @media (prefers-color-scheme: light) {
