--- a/src/main.css
+++ b/src/main.css
@@ -21,27 +21,52 @@
   a:hover {
     color: #535bf2;
   }
-  
   h1 {
     font-size: 3.2em;
     line-height: 1.1;
+    text-align: center;
   }
+.nav-tabs {
+  font-size: 150%;
+  text-align: center;
+  list-style-type: none;
 
+}
 .container {
     position: relative;
     text-align: center;
     color: white;
-  
+    list-style-position:inside;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
 }
 
   .image {
     height: 300px;
     width: 500px;
+    margin: 50px;
+    border-style: solid;
   }
 
   .image:hover {
-    box-shadow: 30px;
-    box-shadow: #747bff;
+    box-shadow: 70px;
+    box-shadow: #e6ff74;
+    border-style: groove;
+    border-color: #ffffff;
+
+  }
+  .card {
+    place-self: center;
+    border-style: solid;
+    text-align: center;
+   padding:25px;
+   margin:5%;
   }
 
   #footer {
